google calendar stuff

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,7 @@ DB_DATABASE=tasca
 DB_USERNAME=tasca
 DB_PASSWORD=tasca
 
+GOOGLE_API_KEY=your_google_api_key_goes_here
+
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
