--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ DB_USERNAME=tasca
 DB_PASSWORD=tasca
 
 GOOGLE_API_KEY=your_google_api_key_goes_here
+GOOGLE_CLIENT_ID=your_google_client_id_goes_here
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
