--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.1.3",
         "laravel/lumen-framework": "5.6.*",
         "vlucas/phpdotenv": "~2.2",
-        "google/apiclient": "^2.0"
+        "google/apiclient": "^2.0",
+        "proshore/entrust-lumen": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
