change sample password for easier sed

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=tasca
 DB_USERNAME=tasca
-DB_PASSWORD=tasca
+DB_PASSWORD=tascapw
 
 GOOGLE_API_KEY=your_google_api_key_goes_here
 GOOGLE_CLIENT_ID=your_google_client_id_goes_here
