--- a/tasca.conf
+++ b/tasca.conf
@@ -9,12 +9,12 @@ server {
 
         root /var/www/tasca/tasca.vuejs/dist;
 
-        index index.html
+        index index.html;
 
         server_name tasca.com;
 
         location / {
-                try_files $uri $uri/ =404;
+                try_files $uri /index.html;
         }
 
         location /api/ {
