--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.6.*",
-        "vlucas/phpdotenv": "~2.2",
+        "laravel/lumen-framework": "5.8.*",
+        "vlucas/phpdotenv": "^3.0",
         "google/apiclient": "^2.0",
         "proshore/entrust-lumen": "^1.0"
     },
