--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.1-fpm
+FROM php:7.3-fpm
 
 MAINTAINER Descamps Antoine <antoine.descamps@ineat-conseil.fr>
 
@@ -11,17 +11,19 @@ RUN apt-get update && apt-get install -y \
         libpq-dev \
         libxpm-dev \
         libvpx-dev \
+        libzip-dev \
     && pecl install xdebug \
     && docker-php-ext-enable xdebug \
-    && docker-php-ext-install -j$(nproc) mcrypt \
+    && pecl install mcrypt \
+    && docker-php-ext-enable mcrypt \
     && docker-php-ext-install -j$(nproc) gd \
     && docker-php-ext-install -j$(nproc) intl \
     && docker-php-ext-install -j$(nproc) zip \
     && docker-php-ext-install -j$(nproc) pgsql \
     && docker-php-ext-install -j$(nproc) pdo_pgsql \
     && docker-php-ext-install -j$(nproc) exif \
-    && docker-php-ext-configure gd \
-        --with-freetype-dir=/usr/include/ \
-        --with-jpeg-dir=/usr/include/ \
-        --with-xpm-dir=/usr/lib/x86_64-linux-gnu/ \
-        --with-vpx-dir=/usr/lib/x86_64-linux-gnu/ \
+  #  && docker-php-ext-configure gd \
+  #      --with-freetype-dir=/usr/include/ \
+  #      --with-jpeg-dir=/usr/include/ \
+  #      --with-xpm-dir=/usr/lib/x86_64-linux-gnu/ \
+  #      --with-vpx-dir=/usr/lib/x86_64-linux-gnu/ \
