--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ GOOGLE_CLIENT_ID=your_google_client_id_goes_here
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
+
+MAIL_FROM_ADDRESS=admin@tasca.app
+MAIL_FROM_NAME=Tasca Administrator
