--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.8.*",
-        "vlucas/phpdotenv": "^3.0",
+        "php": ">=7.4.11",
+        "laravel/lumen-framework": "^8.0",
         "google/apiclient": "^2.0",
-        "proshore/entrust-lumen": "^1.0",
         "doctrine/dbal": "^2.9",
         "niklasravnsborg/laravel-pdf": "^3.1",
-        "irazasyed/larasupport": "^1.6"
+        "irazasyed/larasupport": "^1.6",
+        "laravel/legacy-factories": "^1.1",
+        "illuminate/mail": "^8.16",
+        "illuminate/notifications": "^8.16"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -22,13 +23,14 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/",
             "Unum\\Maker\\": "packages/unum/maker/src/"
         }
     },
     "autoload-dev": {
         "classmap": [
-            "tests/",
-            "database/"
+            "tests/"
         ]
     },
     "scripts": {
